@@ -8,14 +8,9 @@ PLUGIN=libnpjp2.so
 PLUGINPTH=/@basediralias@/jre/lib/@archdir@/$PLUGIN
 
 for browser_dir in $browser_dirs; do
-    if [ $browser_dir = xulrunner-addons ]; then
-	browser=xulrunner-1.9
-    else
-	browser=$browser_dir
-    fi
     update-alternatives --quiet --install \
 	/usr/lib/$browser_dir/plugins/libjavaplugin.so \
-	$browser-javaplugin.so \
+	$browser_dir-javaplugin.so \
 	$PLUGINPTH \
 	$priority
 done
