@@ -2,6 +2,7 @@ sun-java6 (6.33-2) UNRELEASED; urgency=low
 
   * Add lintian overrides for missing binary hardening
   * Remove unused code from installation scripts
+  * Remove obsolete code for browser plugin
 
  -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Sat, 16 Jun 2012 21:19:04 +0000
 
